# VIX_Alert

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/vix_alert/: __init__.py  analyzer.py  cli.py
