[project]
name = "vix-alert"
version = "0.1.0"
description = "VIX data fetching and statistical threshold analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.1",
    "yfinance>=0.2.40",
]

[project.scripts]
vix-alert = "vix_alert.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vix_alert"]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "twine>=6.2.0",
]
